--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="bg">    
 <div class="nav">
     <div class="navimg">
-        <img src="/src/logo.jpg" alt="">
+        <img src="src/logo.jpg" alt="">
     </div>
 
     <div class="navbar"> 
@@ -57,7 +57,7 @@
         </div>
 
         <div id="f3">
-            <img class="ia" src="/src/dosaa.jpg" alt="">
+            <img class="ia" src="src/dosaa.jpg" alt="">
             <p>Dosa&emsp;<span class="i">45$</span></p>
 
             <input id="vdo" type="number" min="1" max="5">
@@ -65,7 +65,7 @@
         </div>
 
         <div id="f4">
-            <img src="/src/upma.jpg" alt="">
+            <img src="src/upma.jpg" alt="">
             <p>Upma&emsp;<span class="i">25$</span></p>
 
             <input id="vup" type="number" min="1" max="5">
@@ -73,14 +73,14 @@
         </div>
 
         <div id="fd5">
-            <img src="/src/coffe.webp" alt="">
+            <img src="src/coffe.webp" alt="">
             <p>coffe&emsp;<span class="i">15$</span></p>
             <input id="vcf" type="number" min="1" max="5">
             <button onclick="fun(this)">Order</button>
         </div>
 
         <div id="fd6">
-            <img src="/src/tea.jpg" alt="">
+            <img src="src/tea.jpg" alt="">
             <p>Tea&emsp;<span class="i">10$</span></p>
             <input id="vte" type="number" min="1" max="5">
             <button onclick="fun(this)">Order</button>
@@ -117,7 +117,7 @@
     <div class="pay">
         <h2>Scan To Pay</h2>
         <button onclick="pay(this)">GET QR</button><br>
-        <img id="qr" src="/src/qrimg.png" alt="">
+        <img id="qr" src="src/qrimg.png" alt="">
         <h2>Amount:<span id="amtqr">0</span></h2>
     </div>
 </div>
