--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&family=Londrina+Sketch&family=Monda:wght@400..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -49,7 +49,7 @@
         </div>
 
         <div id="f2">
-            <img src="/src/vada.jpg" alt="">
+            <img src="src/vada.jpg" alt="">
             <p>Vada&emsp;<span class="i">30$</span></p>
 
             <input class="ia" id="vvd" type="number" min="1" max="5">
